--- a/neo-config-dev.properties
+++ b/neo-config-dev.properties
@@ -1,1 +1,13 @@
 neo.hello=hello im  dev
+
+######
+#仓库中的配置文件会被转换成web接口，访问可以参照以下的规则：
+#
+#/{application}/{profile}[/{label}]
+#/{application}-{profile}.yml
+#/{label}/{application}-{profile}.yml
+#/{application}-{profile}.properties
+#/{label}/{application}-{profile}.properties
+#以neo-config-dev.properties为例子，它的application是neo-config，profile是dev。client会根据填写的参数来选择读取对应的配置。
+#所以文中说测试server端是否可以读取到github上面的配置信息，直接访问：http://localhost:8001/neo-config/dev
+######
